--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -9,7 +9,8 @@
 /* Pages */
 @import "./pages/home.css";
 @import "./pages/about.css";
-/* @import "./pages/EmailIndex.css" */
+@import "./cmps/EmailCompose.css";
+@import "./pages/EmailIndex.css";;
 
 /* Components */
 @import "./cmps/AppHeader.css";
