--- a/src/assets/css/pages/EmailIndex.css
+++ b/src/assets/css/pages/EmailIndex.css
@@ -1,13 +1,17 @@
-/* .email-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding: 0;
+html, body, #root {
+    height: 100%; /* Ensure the background covers the full height */
     margin: 0;
+    font-family: Arial, sans-serif;
+}
+.main-layout {
+
+    background-image: url('../../imgs/ph.jpg');
+    background-size: cover; /* This will make the background cover the entire element */
+    background-position: center; /* This centers the background image */
+    background-repeat: no-repeat; /* This prevents the background from repeating */
 }
 
-.email-list ul {
+/* .email-list ul {
     list-style: none;
     padding: 0;
     margin: 0;
